Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25507

Format QML moves scroll position unexpectedly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • Qt Creator 4.14.1
    • Quick / QML Support
    • None
    • Windows
    • 82b2878fac (qt-creator/qt-creator/master)

    Description

      Update: The behavior is also surprising without FakeVim. Updating ticket to be generic to the QML formatter.

      When using the QML format, the scroll is reset to put the cursor in the middle of the visible text window. This is inconsistent with the cpp formatter, which will leave the scroll in its current position.

      Old Ticket
      When in FakeVim mode in QtCreator, when you auto-format a QML file, the cursor jumps to the bottom of the page (equivalent to GG command).
      This is very cumbersome, especially if you use format on save.
      Basically have to disable FakeVim or format on save.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-25507
        # Subject Branch Project Status CR V

        Activity

          People

            fawzi Fawzi Mohamed
            jhuels20 Joshua Huels
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes