qmljseditor: preserve state when reformatting

Only editing position was preserved (and incorrect column) when
reformatting qml, preserve also scoll position (and correct column
position).

Fixes: QTCREATORBUG-25507
Change-Id: Ieaec2c5390e437f32b4b97b2bbb47975895f96d8
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>